@@ -6,10 +6,10 @@ import org.bme.micro_futar.orders.mappers.CountryPriceMapper;
 import org.bme.micro_futar.orders.repositories.CountryPriceRepository;
 import org.bme.micro_futar.shared.dtos.CountryPriceDTO;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,7 +21,7 @@ public class CountryPriceService {
     public List<CountryPriceDTO> getAllCountryPrices() {
         return countryPriceRepository.findAll().stream()
                 .map(countryPriceMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<CountryPriceDTO> getCountryPriceById(Long id) {
@@ -31,5 +31,11 @@ public class CountryPriceService {
 
     public Optional<CountryPrice> findPriceByCountriesAndSize(long originCountryId, long destinationCountryId, long packageSizeId) {
         return countryPriceRepository.findByOriginCountryIdAndDestinationCountryIdAndPackageSizeId(originCountryId, destinationCountryId, packageSizeId);
+    }
+
+    @Transactional
+    public CountryPrice saveCountryPrice(CountryPriceDTO countryPriceDTO) {
+        CountryPrice countryPrice = countryPriceMapper.toEntity(countryPriceDTO);
+        return countryPriceRepository.save(countryPrice);
     }
 }
