@@ -1,14 +1,15 @@
 package org.bme.micro_futar.orders.services;
 
 import lombok.RequiredArgsConstructor;
+import org.bme.micro_futar.orders.entities.LocationCountry;
 import org.bme.micro_futar.orders.mappers.LocationCountryMapper;
 import org.bme.micro_futar.orders.repositories.LocationCountryRepository;
 import org.bme.micro_futar.shared.dtos.LocationCountryDTO;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,11 +21,17 @@ public class LocationCountryService {
     public List<LocationCountryDTO> getAllCountries() {
         return locationCountryRepository.findAll().stream()
                 .map(locationCountryMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<LocationCountryDTO> getCountryById(Long id) {
         return locationCountryRepository.findById(id)
                 .map(locationCountryMapper::toDTO);
+    }
+
+    @Transactional
+    public LocationCountry saveLocationCountry(LocationCountryDTO locationCountryDTO) {
+        LocationCountry locationCountry = locationCountryMapper.toEntity(locationCountryDTO);
+        return locationCountryRepository.save(locationCountry);
     }
 }
